--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: miaowang
-description: "A new Flutter project."
+description: "一款猫语播放器应用。"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -35,6 +35,29 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # UI相关
+  flutter_staggered_grid_view: ^0.7.0
+  
+  # 音频处理
+  audioplayers: ^5.2.0
+  just_audio: ^0.10.0
+  
+  # 状态管理
+  flutter_riverpod: ^2.4.0
+  
+  # 本地存储
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
+  uuid: ^4.1.0
+  
+  # 网络与缓存
+  dio: ^5.3.3
+  dio_cache_interceptor: ^4.0.3
+  
+  # 文件处理
+  file_picker: ^10.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -44,7 +67,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -87,3 +112,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  # 添加资源文件夹
+  assets:
+    - assets/sounds/
+    - assets/images/
