build: 更新版本号至1.1.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,11 @@ dependencies:
   # 关于页面所需依赖
   url_launcher: ^6.2.4
   package_info_plus: ^8.3.0
+  shared_preferences: ^2.5.3
+  permission_handler: ^12.0.0+1
+  connectivity_plus: ^6.1.4
+  flutter_markdown: ^0.7.7+1
+  open_file: ^3.5.10
 
 dev_dependencies:
   flutter_test:
