--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "miaowang",
-    "short_name": "miaowang",
+    "name": "MeowBiu",
+    "short_name": "MeowBiu",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
