--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "miaowang" "\0"
+            VALUE "FileDescription", "MeowBiu" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "miaowang" "\0"
+            VALUE "InternalName", "MeowBiu" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "miaowang.exe" "\0"
-            VALUE "ProductName", "miaowang" "\0"
+            VALUE "OriginalFilename", "MeowBiu.exe" "\0"
+            VALUE "ProductName", "MeowBiu" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
